[boyscout] feat: implemented basic endpoints
