# app/Technical/User/LoginUserDto.php
@@ -1,0 +1,27 @@
+<?php
+
+namespace App\Technical\User;
+
+use Spatie\LaravelData\Data;
+
+class LoginUserDto extends Data
+{
+    private string $username;
+    private string $password;
+
+    public function __construct(string $username, string $password)
+    {
+        $this->username = $username;
+        $this->password = $password;
+    }
+
+    public function getUsername(): string
+    {
+        return $this->username;
+    }
+
+    public function getPassword(): string
+    {
+        return $this->password;
+    }
+}
